src/assets/styles/vars.sass
/* 

// Z-INDEX
// $z-layerOne: 100 // Stars and Back-Menu
// $z-layerTwo: 200 // Landscape
// $z-layerThree: 300 // Clouds + Footer
// $z-layerFour: 400 // Front-Menu
// $z-layerFive: 500 // Modals
// $z-mouse: 999 */

:root
  /* theme */
  --theme-bg: hsla(48, 10%, 82%, 1)
  --theme-blok: hsla(48, 10%, 90%, 1)
  --theme-blok-hover: hsla(48, 10%, 100%, 1)
  --theme-blok-sidepanel: hsla(48, 10%, 86%, 1)
  --theme-bg-gradient: 0
  --theme-type: hsla(20, 100%, 01%, 1)
  --theme-type-support: #339A62
  --theme-muted-opacity: .35
  --theme-media-filter: none

  // typography
  --font-size-caption: 0.66rem
  --line-height: 1.45
  @media (max-width: 770px)
    --font-size-caption: 0.8reml

  // Sizing
  --icon-size: 1.1363636364rem
  --border-width: 2px
  --border-hyperlink: 1.5px
  --blok-padding: 1.25rem
  --blok-height: calc(var(--blok-padding) * 2 + (var(--line-height) * 1rem))
  --blok-padding-extraTop: var(--blok-height)
  --blok-padding-firstTop: calc(28vh - (var(--blok-height) + var(--blok-padding)))
  --filter-bottom-padding: 1rem
  --panel-height: 150px
  --panel-perspective-origin: 50% 0vh
  --spacing-side: 1.25rem
  --spacing-side-image: var(--spacing-side)
  --spacing-base: 1.25rem
  --spacing-icons: 1.25rem
  --spacing-half: 0.625rem
  // 124px panel height + blok height + desired margin
  --spacing-containerTopDistance: 0
  @media (max-width: 770px)
    --spacing-side: 1rem
    --spacing-base: 1rem
    --spacing-icons: 1rem
    --border-hyperlink: 1px
  @media (max-width: 450px)
    --spacing-icons: 0.75rem

  // Transition
  --transition-button: .33s ease
  --transition-layout: 0.66s ease-in-out
  --theme-transition: 0.33s ease

// LAYOUTS
body[data-fullscreen='false']
  // Height topPanel + blok height + 25vh
  --blok-padding-extraTop: var(--blok-height)
  --blok-padding-firstTop: var(--blok-height)
  --spacing-containerTopDistance: calc(124px + var(--blok-height) + 25vh)
  --panel-perspective-origin: 50% -70rem
  @media (orientation: portrait)
    --spacing-containerTopDistance: calc(124px + var(--blok-height) + 10vh)
  @media (max-width: 770px)
    --panel-perspective-origin: 50% -38rem
    --blok-padding-extraTop: 1rem
    --blok-padding-firstTop: 1rem
    --spacing-side-image: 0
  @media (max-width: 450px)
    --panel-perspective-origin: 50% -32rem

// THEMES
body[data-theme='DARK']
  --theme-bg: hsla(0, 0%, 0%, 1)
  --theme-blok: hsla(0, 0%, 8%, 1)
  --theme-blok-hover: hsla(0, 0%, 10%, 1)
  --theme-blok-sidepanel: hsla(0, 0%, 4%, 1)
  --theme-type: white
  --theme-type-support: #339A62
  --theme-muted-opacity: .5
  --theme-bg-gradient: 0

body[data-theme='NIGHT']
  --theme-bg: black
  --theme-blok: black
  --theme-blok-hover: hsla(0, 0%, 10%, 1)
  --theme-blok-sidepanel: black
  --theme-type: hsla(0, 100%, 50%, 1)
  --theme-type-support: hsla(0, 100%, 50%, 1)
  --theme-muted-opacity: .6
  --theme-media-filter: grayscale(1) contrast(1.22) brightness(0.33) sepia(1) saturate(8) hue-rotate(-18deg)

